--- a/eBest-Rapporter/TestRapporter/OrdreTilbud.rdl
+++ b/eBest-Rapporter/TestRapporter/OrdreTilbud.rdl
@@ -694,9 +694,9 @@ WHERE
                 </Paragraphs>
                 <rd:DefaultName>Textbox28</rd:DefaultName>
                 <Top>0.26458cm</Top>
-                <Left>0.67478cm</Left>
+                <Left>0cm</Left>
                 <Height>0.6cm</Height>
-                <Width>19.29776cm</Width>
+                <Width>20.5cm</Width>
                 <Style>
                   <Border>
                     <Style>None</Style>
@@ -722,17 +722,17 @@ WHERE
                 </Style>
               </Line>
               <Subreport Name="Subreport1">
-                <ReportName>/Test rapporter/TestDraftLines</ReportName>
+                <ReportName>/Test rapporter/OrderLines</ReportName>
                 <Parameters>
                   <Parameter Name="OrderId">
                     <Value>=Sum(Fields!Id.Value, "Draft_orderHead")</Value>
                   </Parameter>
                 </Parameters>
                 <OmitBorderOnPageBreak>true</OmitBorderOnPageBreak>
-                <Top>0.86458cm</Top>
-                <Left>0.64508cm</Left>
-                <Height>2.46062cm</Height>
-                <Width>19.38702cm</Width>
+                <Top>0.93514cm</Top>
+                <Left>0cm</Left>
+                <Height>2.42534cm</Height>
+                <Width>20.5cm</Width>
                 <ZIndex>2</ZIndex>
                 <Style>
                   <Border>
@@ -750,7 +750,7 @@ WHERE
                         <Value>Tilbud er gyldig til:  </Value>
                         <Style>
                           <FontFamily>Arial Rounded MT Bold</FontFamily>
-                          <FontWeight>Normal</FontWeight>
+                          <FontWeight>Bold</FontWeight>
                           <Format>d MMM yyyy</Format>
                         </Style>
                       </TextRun>
@@ -758,7 +758,7 @@ WHERE
                         <Value>=Fields!DraftValidTo.Value</Value>
                         <Style>
                           <FontFamily>Arial Rounded MT Bold</FontFamily>
-                          <FontWeight>Thin</FontWeight>
+                          <FontWeight>Bold</FontWeight>
                           <Format>d MMM yyyy</Format>
                         </Style>
                       </TextRun>
@@ -769,10 +769,10 @@ WHERE
                   </Paragraph>
                 </Paragraphs>
                 <rd:DefaultName>SoldByName</rd:DefaultName>
-                <Top>3.3252cm</Top>
-                <Left>0.64502cm</Left>
+                <Top>3.53686cm</Top>
+                <Left>0cm</Left>
                 <Height>0.6cm</Height>
-                <Width>19.3275cm</Width>
+                <Width>20.5cm</Width>
                 <ZIndex>3</ZIndex>
                 <Style>
                   <Border>
@@ -789,7 +789,7 @@ WHERE
             <KeepTogether>true</KeepTogether>
             <Top>41.54635cm</Top>
             <Left>0.40028cm</Left>
-            <Height>4.60375cm</Height>
+            <Height>4.25979cm</Height>
             <Width>20.5cm</Width>
             <ZIndex>2</ZIndex>
             <Style>
@@ -871,7 +871,7 @@ WHERE
             </Style>
           </Image>
           <Subreport Name="sales_terms">
-            <ReportName>/Test rapporter/Sales_terms</ReportName>
+            <ReportName>/Test rapporter/Sales_terms2</ReportName>
             <Top>46.57207cm</Top>
             <Left>0.40028cm</Left>
             <Height>5.15938cm</Height>
@@ -897,8 +897,8 @@ WHERE
             </Style>
           </Subreport>
           <Line Name="Line2">
-            <Top>60.89668cm</Top>
-            <Left>0cm</Left>
+            <Top>62.42379cm</Top>
+            <Left>0.02328cm</Left>
             <Height>0cm</Height>
             <Width>21.72891cm</Width>
             <ZIndex>7</ZIndex>
@@ -910,8 +910,8 @@ WHERE
             </Style>
           </Line>
           <Line Name="Line3">
-            <Top>59.38856cm</Top>
-            <Left>0cm</Left>
+            <Top>60.91567cm</Top>
+            <Left>0.02328cm</Left>
             <Height>0cm</Height>
             <Width>21.72891cm</Width>
             <ZIndex>8</ZIndex>
@@ -964,8 +964,8 @@ WHERE
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox1</rd:DefaultName>
-            <Top>59.60022cm</Top>
-            <Left>0.377cm</Left>
+            <Top>61.12733cm</Top>
+            <Left>0.40028cm</Left>
             <Height>1.12007cm</Height>
             <Width>4.78238cm</Width>
             <ZIndex>9</ZIndex>
@@ -1021,8 +1021,8 @@ WHERE
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox1</rd:DefaultName>
-            <Top>59.60022cm</Top>
-            <Left>8.40871cm</Left>
+            <Top>61.12733cm</Top>
+            <Left>8.43199cm</Left>
             <Height>1.12007cm</Height>
             <Width>4.78238cm</Width>
             <ZIndex>10</ZIndex>
@@ -1078,8 +1078,8 @@ WHERE
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox1</rd:DefaultName>
-            <Top>59.60022cm</Top>
-            <Left>17.73504cm</Left>
+            <Top>61.12733cm</Top>
+            <Left>17.75832cm</Left>
             <Height>1.12007cm</Height>
             <Width>3.53884cm</Width>
             <ZIndex>11</ZIndex>
@@ -1098,8 +1098,8 @@ WHERE
             <Value>Logoliten73x207</Value>
             <MIMEType>image/jpeg</MIMEType>
             <Sizing>FitProportional</Sizing>
-            <Top>57.05006cm</Top>
-            <Left>7.3025cm</Left>
+            <Top>58.57717cm</Top>
+            <Left>7.32578cm</Left>
             <Height>2.14312cm</Height>
             <Width>8.41375cm</Width>
             <ZIndex>12</ZIndex>
@@ -1109,8 +1109,199 @@ WHERE
               </Border>
             </Style>
           </Image>
+          <Tablix Name="Tablix1">
+            <TablixCorner>
+              <TablixCornerRows>
+                <TablixCornerRow>
+                  <TablixCornerCell>
+                    <CellContents>
+                      <Textbox Name="Textbox11">
+                        <CanGrow>true</CanGrow>
+                        <KeepTogether>true</KeepTogether>
+                        <Paragraphs>
+                          <Paragraph>
+                            <TextRuns>
+                              <TextRun>
+                                <Value />
+                                <Style />
+                              </TextRun>
+                            </TextRuns>
+                            <Style />
+                          </Paragraph>
+                        </Paragraphs>
+                        <rd:DefaultName>Textbox11</rd:DefaultName>
+                        <Visibility>
+                          <Hidden>true</Hidden>
+                        </Visibility>
+                        <Style>
+                          <Border>
+                            <Color>LightGrey</Color>
+                            <Style>Solid</Style>
+                          </Border>
+                          <PaddingLeft>2pt</PaddingLeft>
+                          <PaddingRight>2pt</PaddingRight>
+                          <PaddingTop>2pt</PaddingTop>
+                          <PaddingBottom>2pt</PaddingBottom>
+                        </Style>
+                      </Textbox>
+                    </CellContents>
+                  </TablixCornerCell>
+                </TablixCornerRow>
+              </TablixCornerRows>
+            </TablixCorner>
+            <TablixBody>
+              <TablixColumns>
+                <TablixColumn>
+                  <Width>10.25cm</Width>
+                </TablixColumn>
+              </TablixColumns>
+              <TablixRows>
+                <TablixRow>
+                  <Height>0.24265cm</Height>
+                  <TablixCells>
+                    <TablixCell>
+                      <CellContents>
+                        <Textbox Name="Textbox7">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value />
+                                  <Style />
+                                </TextRun>
+                              </TextRuns>
+                              <Style />
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Textbox7</rd:DefaultName>
+                          <Visibility>
+                            <Hidden>true</Hidden>
+                          </Visibility>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                  </TablixCells>
+                </TablixRow>
+              </TablixRows>
+            </TablixBody>
+            <TablixColumnHierarchy>
+              <TablixMembers>
+                <TablixMember>
+                  <Group Name="ColumnGroup">
+                    <GroupExpressions>
+                      <GroupExpression />
+                    </GroupExpressions>
+                  </Group>
+                  <TablixHeader>
+                    <Size>0.24265cm</Size>
+                    <CellContents>
+                      <Textbox Name="Textbox6">
+                        <CanGrow>true</CanGrow>
+                        <KeepTogether>true</KeepTogether>
+                        <Paragraphs>
+                          <Paragraph>
+                            <TextRuns>
+                              <TextRun>
+                                <Value />
+                                <Style />
+                              </TextRun>
+                            </TextRuns>
+                            <Style />
+                          </Paragraph>
+                        </Paragraphs>
+                        <rd:DefaultName>Textbox6</rd:DefaultName>
+                        <Visibility>
+                          <Hidden>true</Hidden>
+                        </Visibility>
+                        <Style>
+                          <Border>
+                            <Color>LightGrey</Color>
+                            <Style>Solid</Style>
+                          </Border>
+                          <PaddingLeft>2pt</PaddingLeft>
+                          <PaddingRight>2pt</PaddingRight>
+                          <PaddingTop>2pt</PaddingTop>
+                          <PaddingBottom>2pt</PaddingBottom>
+                        </Style>
+                      </Textbox>
+                    </CellContents>
+                  </TablixHeader>
+                </TablixMember>
+              </TablixMembers>
+            </TablixColumnHierarchy>
+            <TablixRowHierarchy>
+              <TablixMembers>
+                <TablixMember>
+                  <Group Name="RowGroup">
+                    <GroupExpressions>
+                      <GroupExpression />
+                    </GroupExpressions>
+                  </Group>
+                  <TablixHeader>
+                    <Size>10.25cm</Size>
+                    <CellContents>
+                      <Textbox Name="Textbox5">
+                        <CanGrow>true</CanGrow>
+                        <KeepTogether>true</KeepTogether>
+                        <Paragraphs>
+                          <Paragraph>
+                            <TextRuns>
+                              <TextRun>
+                                <Value />
+                                <Style />
+                              </TextRun>
+                            </TextRuns>
+                            <Style />
+                          </Paragraph>
+                        </Paragraphs>
+                        <rd:DefaultName>Textbox5</rd:DefaultName>
+                        <Visibility>
+                          <Hidden>true</Hidden>
+                        </Visibility>
+                        <Style>
+                          <Border>
+                            <Color>LightGrey</Color>
+                            <Style>Solid</Style>
+                          </Border>
+                          <PaddingLeft>2pt</PaddingLeft>
+                          <PaddingRight>2pt</PaddingRight>
+                          <PaddingTop>2pt</PaddingTop>
+                          <PaddingBottom>2pt</PaddingBottom>
+                        </Style>
+                      </Textbox>
+                    </CellContents>
+                  </TablixHeader>
+                </TablixMember>
+              </TablixMembers>
+            </TablixRowHierarchy>
+            <PageBreak>
+              <BreakLocation>Start</BreakLocation>
+            </PageBreak>
+            <Top>51.90784cm</Top>
+            <Left>0.40028cm</Left>
+            <Height>0.4853cm</Height>
+            <Width>20.5cm</Width>
+            <ZIndex>13</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+            </Style>
+          </Tablix>
         </ReportItems>
-        <Height>61.53756cm</Height>
+        <Height>63.01923cm</Height>
         <Style>
           <Border>
             <Style>None</Style>
